@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 AC_PREREQ(2.53)
-AC_INIT([gnocatan],[0.8.1.54])
+AC_INIT([gnocatan],[0.8.1.55])
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AC_CONFIG_SRCDIR([client])
 AM_CONFIG_HEADER(config.h)
@@ -163,6 +163,7 @@ AC_DEFINE_UNQUOTED(ALL_LINGUAS, "$ALL_LINGUAS", [Available languages])
 
 AC_CONFIG_FILES([ \
 	Makefile \
+	gnocatan.spec \
 	po/Makefile.in \
 	common/Makefile \
 	client/Makefile \
